--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 
 	<div class="secs">
 		<div class="button-container">
-			<button class="custom-btn">Experiencia</button>
+			<button class="custom-btn" onclick="window.location.href='#experience';">Experiencia</button>
 			<div class="button-space"></div>
-			<button class="custom-btn">Trabajos</button>
+			<button class="custom-btn" onclick="window.location.href='#work';">Trabajos</button>
 			<div class="button-space"></div>
-			<button class="custom-btn">Contacto</button>
+			<button class="custom-btn" onclick="window.location.href='#contact';">Contacto</button>
 			<div class="button-space"></div>
-			<button class="custom-btn">Opiniones</button>
+			<button class="custom-btn" onclick="window.location.href='#opinions';">Opiniones</button>
 		</div>
 	</div>
 
