--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<link rel="icon" href="imagenes/logo.PNG">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>YavelArt</title>
+	<title>YavelCode</title>
 </head>
 
 <body>
