--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	<section class="experience-section reveal">
 		<div class="container">
 			<div class="section-title">
-				<h2>Mi Experiencia</h2>
+				<h2>Experiencia</h2>
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
@@ -194,8 +194,41 @@
 			</div>
 		</div>
 	</section>
+	<div class="section-title">
+		<h2>Habilidades</h2>
+	</div>
+	<div class="skills-container">
 
-
+		<div class="grid-item"><img src="imagenes/html.png"></div>
+		<div class="grid-item"><img src="imagenes/css.png"></div>
+		<div class="grid-item"><img src="imagenes/js.png"></div>
+		<div class="grid-item"><img src="imagenes/sass.png"></div>
+		<div class="grid-item"><img src="imagenes/bootstrap.png"></div>
+		<div class="grid-item"><img src="imagenes/git.png"></div>
+		<div class="grid-item"><img src="imagenes/github.png"></div>
+		<div class="grid-item"><img src="imagenes/php.png"></div>
+		<div class="grid-item"><img src="imagenes/python.png"></div>
+		<div class="grid-item"><img src="imagenes/oop.png"></div>
+		<div class="grid-item"><img src="imagenes/mysql.png"></div>
+		<div class="grid-item"><img src="imagenes/swift.png"></div>
+		<div class="grid-item"><img src="imagenes/unity.png"></div>
+		<div class="grid-item"><img src="imagenes/wordpress.png"></div>
+		<div class="grid-item"><img src="imagenes/thonny.png"></div>
+		<div class="grid-item"><img src="imagenes/sketch.png"></div>
+		<div class="grid-item"><img src="imagenes/figma.png"></div>
+		<div class="grid-item"><img src="imagenes/canva.png"></div>
+		<div class="grid-item"><img src="imagenes/visual.png"></div>
+		<div class="grid-item"><img src="imagenes/dreamweaver.png"></div>
+		<div class="grid-item"><img src="imagenes/adobexd.png"></div>
+		<div class="grid-item"><img src="imagenes/photoshop.png"></div>
+		<div class="grid-item"><img src="imagenes/adobeillustrator.png"></div>
+		<div class="grid-item"><img src="imagenes/adobepremiere.png"></div>
+		<div class="grid-item"><img src="imagenes/afterefects.png"></div>
+		<div class="grid-item"><img src="imagenes/word.png"></div>
+		<div class="grid-item"><img src="imagenes/ppt.png"></div>
+		<div class="grid-item"><img src="imagenes/excel.png"></div>
+		<!-- Agrega más imágenes aquí -->
+	</div>
 
 
 	<footer class="footer-section">
