--- a/index.html
+++ b/index.html
@@ -106,15 +106,17 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
-					<div class="carta">
-						<div class="experience-item">
-							<div class="logoexp">
-								<img src="imagenes/freelancer.png" alt="logo">
-								<h3>Desarrolladora Front-End</h3>
+					<div class="carta" style="background-color: #CBE5FF;">
+						<div class="experience-item" style="background-color: #CBE5FF;">
+							<div class="logoexp" style="background-color: #CBE5FF;">
+								<img src="imagenes/freelancer.png" alt="logo" style="background-color: #CBE5FF;">
+								<h3 style="background-color: #CBE5FF; color: #1e0f3e;">Desarrolladora Front-End</h3>
 							</div>
-							<h4>Freelancer</h4>
-							<p class="experience-date">Enero 2021 - Presente</p>
-							<p class="experience-description">Como desarrolladora front-end freelancer, he trabajado
+							<h4 style="background-color: #CBE5FF; color: #66aad1;">Freelancer</h4>
+							<p class="experience-date" style="background-color: #CBE5FF; color: #66aad1;">Enero 2021 -
+								Presente</p>
+							<p class="experience-description" style="background-color: #CBE5FF; color: #1e0f3e;">Como
+								desarrolladora front-end freelancer, he trabajado
 								en
 								el desarrollo y mantenimiento de sitios web, utilizando tecnologías como HTML, CSS y
 								JavaScript. Me especializo en la creación de experiencias de usuario atractivas y
@@ -127,15 +129,17 @@
 					</div>
 				</div>
 				<div class="col-lg-6">
-					<div class="carta">
-						<div class="experience-item">
-							<div class="logoexp">
-								<img src="imagenes/everneed.PNG" alt="logo">
-								<h3>Diseñadora Gráfica</h3>
+					<div class="carta" style="background-color: #ede6ff;">
+						<div class="experience-item" style="background-color: #ede6ff;">
+							<div class="logoexp" style="background-color: #ede6ff;">
+								<img src="imagenes/everneed.PNG" alt="logo" style="background-color: #ede6ff;">
+								<h3 style="background-color: #ede6ff; color: #008d7a;">Diseñadora Gráfica</h3>
 							</div>
-							<h4>Everneed SRL - CoolTools</h4>
-							<p class="experience-date">Agosto 2022 - Enero 2023</p>
-							<p class="experience-description">Como diseñadora gráfica en Everneed - CoolTools, tuve
+							<h4 style="background-color: #ede6ff; color: #008d7a8a;">Everneed SRL - CoolTools</h4>
+							<p class="experience-date" style="background-color: #ede6ff; color: #008d7a8a;">Agosto 2022
+								- Enero 2023</p>
+							<p class="experience-description" style="background-color: #ede6ff; color: #008d7a;">Como
+								diseñadora gráfica en Everneed - CoolTools, tuve
 								la
 								oportunidad de crear etiquetas atractivas y funcionales, así como dominar
 								herramientas
@@ -147,15 +151,17 @@
 					</div>
 				</div>
 				<div class="col-lg-6">
-					<div class="carta">
-						<div class="experience-item">
-							<div class="logoexp">
-								<img src="imagenes/tc.png" alt="logo">
-								<h3>Diseñadora de Comics</h3>
+					<div class="carta" style="background-color: #ceeca5;">
+						<div class="experience-item" style="background-color: #ceeca5;">
+							<div class="logoexp" style="background-color: #ceeca5;">
+								<img src="imagenes/tc.png" alt="logo" style="background-color: #ceeca5;">
+								<h3 style="background-color: #ceeca5; color: #1e0f3e;">Diseñadora de Comics</h3>
 							</div>
-							<h4>Tornado Creations</h4>
-							<p class="experience-date">Marzo 2022 - Diciembre 2022</p>
-							<p class="experience-description">Como diseñadora de cómics en Tornado Creations, tuve
+							<h4 style="background-color: #ceeca5; color: #1e0f3e7a;">Tornado Creations</h4>
+							<p class="experience-date" style="background-color: #ceeca5; color: #1e0f3e7a;">Marzo 2022 -
+								Diciembre 2022</p>
+							<p class="experience-description" style="background-color: #ceeca5; color: #1e0f3e;">Como
+								diseñadora de cómics en Tornado Creations, tuve
 								la
 								oportunidad de crear personajes memorables y visualmente atractivos, así como
 								ilustraciones detalladas para el desarrollo del cómic. Utilicé mis habilidades en
@@ -166,15 +172,17 @@
 					</div>
 				</div>
 				<div class="col-lg-6">
-					<div class="carta">
-						<div class="experience-item">
-							<div class="logoexp">
-								<img src="imagenes/freelancer.png" alt="logo">
-								<h3>Artista Digital</h3>
+					<div class="carta" style="background-color: #FCD6FF;">
+						<div class="experience-item" style="background-color: #FCD6FF;">
+							<div class="logoexp" style="background-color: #FCD6FF;">
+								<img src="imagenes/freelancer.png" alt="logo" style="background-color: #FCD6FF;">
+								<h3 style="background-color: #FCD6FF; color: #290038;">Artista Digital</h3>
 							</div>
-							<h4>Freelancer</h4>
-							<p class="experience-date">Marzo 2019 - Diciembre 2020</p>
-							<p class="experience-description">Como artista digital freelancer, he combinado mis
+							<h4 style="background-color: #FCD6FF; color: #aa4db1;">Freelancer</h4>
+							<p class="experience-date" style="background-color: #FCD6FF; color: #aa4db1;">Marzo 2019 -
+								Diciembre 2020</p>
+							<p class="experience-description" style="background-color: #FCD6FF; color: #290038;">Como
+								artista digital freelancer, he combinado mis
 								habilidades en programación front-end y diseño UX para crear experiencias visuales
 								atractivas y funcionales en el desarrollo web. Con conocimientos en HTML, CSS y
 								JavaScript, he trabajado en el desarrollo y mantenimiento de sitios web, optimizando
@@ -194,10 +202,10 @@
 			</div>
 		</div>
 	</section>
-	<div class="section-title">
+	<div class="section-title reveal">
 		<h2>Habilidades</h2>
 	</div>
-	<div class="skills-container">
+	<div class="skills-container reveal">
 
 		<div class="grid-item"><img src="imagenes/html.png"></div>
 		<div class="grid-item"><img src="imagenes/css.png"></div>
@@ -227,9 +235,49 @@
 		<div class="grid-item"><img src="imagenes/word.png"></div>
 		<div class="grid-item"><img src="imagenes/ppt.png"></div>
 		<div class="grid-item"><img src="imagenes/excel.png"></div>
-		<!-- Agrega más imágenes aquí -->
 	</div>
 
+	<br id="work"><br><br><br>
+	<section class="work-section reveal">
+		<div class="container">
+			<div class="section-title reveal">
+				<h2>Trabajos</h2>
+			</div>
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="trab" style="background-color: #94c4d8;">
+						<div class="trab-item" style="background-color: #00000000;" align="center">
+							<img src="imagenes/yavelart.png" alt="Logo de YavelArt">
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="trab" style="background-color: #a72626;">
+						<div class="trab-item" style="background-color: #00000000;" align="center">
+							<img src="imagenes/sebben.png" alt="Logo de Sebben Automotores">
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="trab" style="background-color: #a7aaed;">
+						<div class="trab-item" style="background-color: #00000000;" align="center">
+							<img src="imagenes/yaveldesign.png" alt="Logo de YavelDesign">
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="trab" style="background-color: #80d29b;">
+						<div class="trab-item" style="background-color: #00000000;" align="center">
+							<img src="imagenes/rt.png" alt="Logo de Romero Textil">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="text-center mt-4">
+				<a href="docs/Yavel Rico CV.pdf" class="btn btn-primary">Descargar CV</a>
+			</div>
+		</div>
+	</section>
 
 	<footer class="footer-section">
 		<div class="container">
