--- a/index.html
+++ b/index.html
@@ -245,36 +245,44 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
-					<div class="trab" style="background-color: #94c4d8;">
-						<div class="trab-item" style="background-color: #00000000;" align="center">
-							<img src="imagenes/yavelart.png" alt="Logo de YavelArt">
+					<a href="https://yavelart.netlify.app/index.html">
+						<div class="trab" style="background-color: #94c4d8;">
+							<div class="trab-item" style="background-color: #00000000;" align="center">
+								<img src="imagenes/yavelart.png" alt="Logo de YavelArt">
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="col-lg-6">
-					<div class="trab" style="background-color: #a72626;">
-						<div class="trab-item" style="background-color: #00000000;" align="center">
-							<img src="imagenes/sebben.png" alt="Logo de Sebben Automotores">
+					<a href="https://studioy2021.wordpress.com/">
+						<div class="trab" style="background-color: #d193b9;">
+							<div class="trab-item" style="background-color: #00000000;" align="center">
+								<img src="imagenes/sy.png" alt="Logo de StudioY">
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="col-lg-6">
-					<div class="trab" style="background-color: #a7aaed;">
-						<div class="trab-item" style="background-color: #00000000;" align="center">
-							<img src="imagenes/yaveldesign.png" alt="Logo de YavelDesign">
+					<a href="">
+						<div class="trab" style="background-color: #a7aaed;">
+							<div class="trab-item" style="background-color: #00000000;" align="center">
+								<img src="imagenes/yaveldesign.png" alt="Logo de YavelDesign">
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="col-lg-6">
-					<div class="trab" style="background-color: #80d29b;">
-						<div class="trab-item" style="background-color: #00000000;" align="center">
-							<img src="imagenes/rt.png" alt="Logo de Romero Textil">
+					<a href="https://romerotextil.000webhostapp.com/alfombras/index.html">
+						<div class="trab" style="background-color: #80d29b;">
+							<div class="trab-item" style="background-color: #00000000;" align="center">
+								<img src="imagenes/rt.png" alt="Logo de Romero Textil">
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 			<div class="text-center mt-4">
-				<a href="docs/Yavel Rico CV.pdf" class="btn btn-primary">Descargar CV</a>
+				<a href="https://github.com/YavelRico" class="btn btn-primary">GitHub</a>
 			</div>
 		</div>
 	</section>
