--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=|Source+Sans+Pro|Montserrat|Bahnschrift|">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=|Montserrat|Bahnschrift|">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
@@ -23,7 +24,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"><img src="imagenes/logo-gif.GIF" alt="Logo de YavelArt"></a>
+			<a class="navbar-brand" href="#"><img src="imagenes/logo-gif.GIF" alt="Logo de YavelCode"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -52,156 +53,28 @@
 		</div>
 	</nav>
 	<div class="intro" align="center">
-		<div class="card">
-			<div class="front">
-				<img src="imagenes/yavel.PNG" alt="Imagen frontal">
-			</div>
-			<div class="back">
-				<div class="content">
-					<p class="style2">Información</p>
-					<p class="style3">Soy Yavel Rico, una estudiante <span>apasionada</span> de Desarrollo de Software y
-						Técnica en Diseño y Animación Digital.
-					</p>
-					<p class="style3">Me enfoco en el desarrollo <span>front-end</span> y tengo experiencia en HTML,
-						CSS, JavaScript y
-						frameworks.
-						Mi objetivo es crear experiencias de usuario <span>atractivas</span> y <span>funcionales</span>.
-						Sigo aprendiendo y <span>creciendo</span> como profesional en programación.
-					</p>
-					<p class="style3">
-						Comparto mi pasión en Instagram (@yavelcode) mostrando proyectos, códigos y soluciones
-						<span>creativas</span>.
-					</p>
-					<p class="style3">
-						¡Disfruten mi portafolio de programación!
-					</p>
-					<p class="style4">Yavel Rico<br></p>
-				</div>
-			</div>
-		</div>
 		<div class="typewriter">
 			<h1 class="typewriter-text">&lt;<span id="typewriter-hello"></span>&gt;</h1>
-			<p class="typewriter-subtext" id="typewriter-subtext"><span id="typewriter-underscore"></span></p>
+			<p class="typewriter-subtext" id="typewriter-subtext"></p>
+			<p class="typewriter-subtext2" id="typewriter-subtext2"><span id="typewriter-underscore"></span></p>
 		</div>
-	</div>
-
-	<div class="secs">
-		<div class="button-container">
-			<button class="custom-btn" onclick="window.location.href='#experience';">Experiencia</button>
-			<div class="button-space"></div>
-			<button class="custom-btn" onclick="window.location.href='#work';">Trabajos</button>
-			<div class="button-space"></div>
-			<button class="custom-btn" onclick="window.location.href='#contact';">Contacto</button>
-			<div class="button-space"></div>
-			<button class="custom-btn" onclick="window.location.href='#opinions';">Opiniones</button>
+		<div class="imagen">
+			<img src="imagenes/intro.PNG">
 		</div>
 	</div>
 
 
-	<br><br id="experience"><br><br><br>
+	<br id="experience"><br ><br><br><br><br ><br><br><br>
 	<section class="experience-section reveal">
-		<div class="container">
-			<div class="section-title">
-				<h2>Experiencia</h2>
-			</div>
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="carta" style="background-color: #CBE5FF;">
-						<div class="experience-item" style="background-color: #CBE5FF;">
-							<div class="logoexp" style="background-color: #CBE5FF;">
-								<img src="imagenes/freelancer.png" alt="logo" style="background-color: #CBE5FF;">
-								<h3 style="background-color: #CBE5FF; color: #1e0f3e;">Desarrolladora Front-End</h3>
-							</div>
-							<h4 style="background-color: #CBE5FF; color: #66aad1;">Freelancer</h4>
-							<p class="experience-date" style="background-color: #CBE5FF; color: #66aad1;">Enero 2021 -
-								Presente</p>
-							<p class="experience-description" style="background-color: #CBE5FF; color: #1e0f3e;">Como
-								desarrolladora front-end freelancer, he trabajado
-								en
-								el desarrollo y mantenimiento de sitios web, utilizando tecnologías como HTML, CSS y
-								JavaScript. Me especializo en la creación de experiencias de usuario atractivas y
-								funcionales, implementando diseños responsivos y adaptativos. Además, tengo
-								experiencia
-								en la integración de APIs y servicios externos para agregar funcionalidades
-								avanzadas a
-								los sitios web.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="carta" style="background-color: #ede6ff;">
-						<div class="experience-item" style="background-color: #ede6ff;">
-							<div class="logoexp" style="background-color: #ede6ff;">
-								<img src="imagenes/everneed.PNG" alt="logo" style="background-color: #ede6ff;">
-								<h3 style="background-color: #ede6ff; color: #008d7a;">Diseñadora Gráfica</h3>
-							</div>
-							<h4 style="background-color: #ede6ff; color: #008d7a8a;">Everneed SRL - CoolTools</h4>
-							<p class="experience-date" style="background-color: #ede6ff; color: #008d7a8a;">Agosto 2022
-								- Enero 2023</p>
-							<p class="experience-description" style="background-color: #ede6ff; color: #008d7a;">Como
-								diseñadora gráfica en Everneed - CoolTools, tuve
-								la
-								oportunidad de crear etiquetas atractivas y funcionales, así como dominar
-								herramientas
-								de diseño gráfico como Photoshop, Illustrator e InDesign. También participé en la
-								creación de modelos 3D realistas y detallados, y trabajé en la gestión de proyectos
-								de
-								forma colaborativa.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="carta" style="background-color: #ceeca5;">
-						<div class="experience-item" style="background-color: #ceeca5;">
-							<div class="logoexp" style="background-color: #ceeca5;">
-								<img src="imagenes/tc.png" alt="logo" style="background-color: #ceeca5;">
-								<h3 style="background-color: #ceeca5; color: #1e0f3e;">Diseñadora de Comics</h3>
-							</div>
-							<h4 style="background-color: #ceeca5; color: #1e0f3e7a;">Tornado Creations</h4>
-							<p class="experience-date" style="background-color: #ceeca5; color: #1e0f3e7a;">Marzo 2022 -
-								Diciembre 2022</p>
-							<p class="experience-description" style="background-color: #ceeca5; color: #1e0f3e;">Como
-								diseñadora de cómics en Tornado Creations, tuve
-								la
-								oportunidad de crear personajes memorables y visualmente atractivos, así como
-								ilustraciones detalladas para el desarrollo del cómic. Utilicé mis habilidades en
-								técnicas y estilos de dibujo para transmitir emociones y narrativa visual, y
-								colaboré en
-								el proceso de creación de historias y diseño de viñetas.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="carta" style="background-color: #FCD6FF;">
-						<div class="experience-item" style="background-color: #FCD6FF;">
-							<div class="logoexp" style="background-color: #FCD6FF;">
-								<img src="imagenes/freelancer.png" alt="logo" style="background-color: #FCD6FF;">
-								<h3 style="background-color: #FCD6FF; color: #290038;">Artista Digital</h3>
-							</div>
-							<h4 style="background-color: #FCD6FF; color: #aa4db1;">Freelancer</h4>
-							<p class="experience-date" style="background-color: #FCD6FF; color: #aa4db1;">Marzo 2019 -
-								Diciembre 2020</p>
-							<p class="experience-description" style="background-color: #FCD6FF; color: #290038;">Como
-								artista digital freelancer, he combinado mis
-								habilidades en programación front-end y diseño UX para crear experiencias visuales
-								atractivas y funcionales en el desarrollo web. Con conocimientos en HTML, CSS y
-								JavaScript, he trabajado en el desarrollo y mantenimiento de sitios web, optimizando
-								su
-								rendimiento y resolviendo problemas técnicos. Además, he integrado diseños
-								responsivos y
-								adaptativos para ofrecer una experiencia de usuario óptima en diferentes
-								dispositivos.
-								También he colaborado en proyectos de diseño gráfico y modelaje 3D, demostrando mi
-								dominio en herramientas como Photoshop, Illustrator e InDesign.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="text-center mt-4">
-				<a href="docs/Yavel Rico CV.pdf" class="btn btn-primary">Descargar CV</a>
-			</div>
+		<div class="seccion-1">
+			<p class="titulo">Experiencia</p>
+			<p class="descripciones">Presiona para mas información.</p>
+			<a href="docs/Yavel Rico CV.pdf">
+				<p class="boton-cv">Descargar CV</p>
+			</a>
 		</div>
 	</section>
+
 	<div class="section-title reveal">
 		<h2>Habilidades</h2>
 	</div>
@@ -263,7 +136,7 @@
 					</a>
 				</div>
 				<div class="col-lg-6">
-					<a href="">
+					<a href="https://yaveldesign.netlify.app/">
 						<div class="trab" style="background-color: #a7aaed;">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
 								<img src="imagenes/yaveldesign.png" alt="Logo de YavelDesign">
