--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<div class="seccion-1">
 			<p class="titulo">Experiencia</p>
 			<p class="descripciones">Presiona para mas información.</p>
-			<a href="docs/Yavel Rico CV.pdf">
+			<a href="docs/Yavel Rico CV.pdf" target="_blank">
 				<p class="boton-cv">Descargar CV</p>
 			</a>
 		</div>
@@ -80,8 +80,6 @@
 				<img src="imagenes/exp2.PNG" style="width:100%" class="mySlides fade">
 				<img src="imagenes/exp3.PNG" style="width:100%" class="mySlides fade">
 				<img src="imagenes/exp4.PNG" style="width:100%" class="mySlides fade">
-
-
 
 			</div>
 			<a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -95,40 +93,28 @@
 		</div>
 		<br>
 	</section>
-
-	<div class="section-title reveal">
-		<h2>Habilidades</h2>
-	</div>
-	<div class="skills-container reveal">
-
-		<div class="grid-item"><img src="imagenes/html.png"></div>
-		<div class="grid-item"><img src="imagenes/css.png"></div>
-		<div class="grid-item"><img src="imagenes/js.png"></div>
-		<div class="grid-item"><img src="imagenes/sass.png"></div>
-		<div class="grid-item"><img src="imagenes/bootstrap.png"></div>
-		<div class="grid-item"><img src="imagenes/git.png"></div>
-		<div class="grid-item"><img src="imagenes/github.png"></div>
-		<div class="grid-item"><img src="imagenes/php.png"></div>
-		<div class="grid-item"><img src="imagenes/python.png"></div>
-		<div class="grid-item"><img src="imagenes/oop.png"></div>
-		<div class="grid-item"><img src="imagenes/mysql.png"></div>
-		<div class="grid-item"><img src="imagenes/swift.png"></div>
-		<div class="grid-item"><img src="imagenes/unity.png"></div>
-		<div class="grid-item"><img src="imagenes/wordpress.png"></div>
-		<div class="grid-item"><img src="imagenes/thonny.png"></div>
-		<div class="grid-item"><img src="imagenes/sketch.png"></div>
-		<div class="grid-item"><img src="imagenes/figma.png"></div>
-		<div class="grid-item"><img src="imagenes/canva.png"></div>
-		<div class="grid-item"><img src="imagenes/visual.png"></div>
-		<div class="grid-item"><img src="imagenes/dreamweaver.png"></div>
-		<div class="grid-item"><img src="imagenes/adobexd.png"></div>
-		<div class="grid-item"><img src="imagenes/photoshop.png"></div>
-		<div class="grid-item"><img src="imagenes/adobeillustrator.png"></div>
-		<div class="grid-item"><img src="imagenes/adobepremiere.png"></div>
-		<div class="grid-item"><img src="imagenes/afterefects.png"></div>
-		<div class="grid-item"><img src="imagenes/word.png"></div>
-		<div class="grid-item"><img src="imagenes/ppt.png"></div>
-		<div class="grid-item"><img src="imagenes/excel.png"></div>
+	
+	<div class="logos">
+		<div class="logo-container">
+			<div class="logo-wrapper">
+				<img src="imagenes/html.png" alt="Logo"><img src="imagenes/css.png" alt="Logo"><img src="imagenes/js.png" alt="Logo"><img src="imagenes/sass.png" alt="Logo">
+				<img src="imagenes/bootstrap.png" alt="Logo"><img src="imagenes/git.png" alt="Logo"><img src="imagenes/github.png" alt="Logo"><img src="imagenes/php.png">
+				<img src="imagenes/python.png" alt="Logo"><img src="imagenes/oop.png" alt="Logo"><img src="imagenes/mysql.png" alt="Logo"><img src="imagenes/swift.png" alt="Logo">
+				<img src="imagenes/unity.png" alt="Logo"><img src="imagenes/wordpress.png" alt="Logo"><img src="imagenes/thonny.png" alt="Logo">
+				<img src="imagenes/sketch.png" alt="Logo"><img src="imagenes/figma.png" alt="Logo"><img src="imagenes/canva.png" alt="Logo"><img src="imagenes/visual.png" alt="Logo">
+				<img src="imagenes/dreamweaver.png" alt="Logo"><img src="imagenes/adobexd.png" alt="Logo"><img src="imagenes/photoshop.png" alt="Logo">
+				<img src="imagenes/adobeillustrator.png" alt="Logo"><img src="imagenes/adobepremiere.png" alt="Logo"><img src="imagenes/afterefects.png" alt="Logo">
+				<img src="imagenes/word.png" alt="Logo"><img src="imagenes/ppt.png" alt="Logo"><img src="imagenes/excel.png" alt="Logo">
+				<img src="imagenes/html.png" alt="Logo"><img src="imagenes/css.png" alt="Logo"><img src="imagenes/js.png" alt="Logo"><img src="imagenes/sass.png" alt="Logo">
+				<img src="imagenes/bootstrap.png" alt="Logo"><img src="imagenes/git.png" alt="Logo"><img src="imagenes/github.png" alt="Logo"><img src="imagenes/php.png">
+				<img src="imagenes/python.png" alt="Logo"><img src="imagenes/oop.png" alt="Logo"><img src="imagenes/mysql.png" alt="Logo"><img src="imagenes/swift.png" alt="Logo">
+				<img src="imagenes/unity.png" alt="Logo"><img src="imagenes/wordpress.png" alt="Logo"><img src="imagenes/thonny.png" alt="Logo">
+				<img src="imagenes/sketch.png" alt="Logo"><img src="imagenes/figma.png" alt="Logo"><img src="imagenes/canva.png" alt="Logo"><img src="imagenes/visual.png" alt="Logo">
+				<img src="imagenes/dreamweaver.png" alt="Logo"><img src="imagenes/adobexd.png" alt="Logo"><img src="imagenes/photoshop.png" alt="Logo">
+				<img src="imagenes/adobeillustrator.png" alt="Logo"><img src="imagenes/adobepremiere.png" alt="Logo"><img src="imagenes/afterefects.png" alt="Logo">
+				<img src="imagenes/word.png" alt="Logo"><img src="imagenes/ppt.png" alt="Logo"><img src="imagenes/excel.png" alt="Logo">
+			</div>
+		</div>
 	</div>
 
 	<br id="work"><br><br><br>
