--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 		<div class="seccion-2" align="center">
 			<div class="slideshow-container" align="center">
 
-				<img src="imagenes/exp1.PNG" style="width:100%" class="mySlides fade">
-				<img src="imagenes/exp2.PNG" style="width:100%" class="mySlides fade">
-				<img src="imagenes/exp3.PNG" style="width:100%" class="mySlides fade">
-				<img src="imagenes/exp4.PNG" style="width:100%" class="mySlides fade">
+				<img src="imagenes/exp1.PNG" style="width:100%" class="mySlides fade" id="desaFE">
+				<img src="imagenes/exp2.PNG" style="width:100%" class="mySlides fade" id="DisGra">
+				<img src="imagenes/exp3.PNG" style="width:100%" class="mySlides fade" id="DisCom">
+				<img src="imagenes/exp4.PNG" style="width:100%" class="mySlides fade" id="Artista">
 
 			</div>
 			<a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -93,26 +93,107 @@
 		</div>
 		<br>
 	</section>
-	
+
+	<!-- The Modal -->
+	<div id="myModal1" class="modal">
+
+		<!-- Modal content -->
+		<div class="modal-content">
+			<span class="close1">&times;</span>
+			<p class="titulo-exp">Desarrolladora Front-End</p>
+			<p class="subtitulo-exp">Freelancer</p>
+			<p class="subtitulo-exp">Marzo 2021 - presente</p>
+			<p class="descrip-exp">• Desarrollo y mantenimiento de sitios web con HTML, CSS y JavaScript.</p>
+			<p class="descrip-exp">• Mejora del rendimiento y solución de problemas técnicos en los sitios web.</p>
+			<p class="descrip-exp">• Implementación de diseños responsivos y adaptativos para una experiencia de usuario óptima en diversos dispositivos y pantallas.</p>
+			<p class="descrip-exp">• Integración de APIs y servicios externos para agregar funcionalidades avanzadas, como pagos y autenticación.</p>
+		</div>
+
+	</div>
+
+	<div id="myModal2" class="modal">
+
+		<!-- Modal content -->
+		<div class="modal-content">
+			<span class="close2">&times;</span>
+			<p class="titulo-exp">Diseñadora Gráfica</p>
+			<p class="subtitulo-exp">Everneed SRL - Cool Tools</p>
+			<p class="subtitulo-exp">Agosto 2022 - presente</p>
+			<p class="descrip-exp">• Diseño de etiquetas atractivas y funcionales.</p>
+			<p class="descrip-exp">• Dominio de herramientas de diseño gráfico como Photoshop, Illustrator e InDesign.</p>
+			<p class="descrip-exp">• Modelado 3D de objetos realistas y detallados.</p>
+			<p class="descrip-exp">• Gestión de proyectos y trabajo colaborativo.</p>
+		</div>
+
+	</div>
+
+	<div id="myModal3" class="modal">
+
+		<!-- Modal content -->
+		<div class="modal-content">
+			<span class="close3">&times;</span>
+			<p class="titulo-exp">Diseñadora de Comics</p>
+			<p class="subtitulo-exp">Tornado Creations</p>
+			<p class="subtitulo-exp">Enero 2022 - Enero 2023</p>
+			<p class="descrip-exp">• Diseño de personajes memorables y visualmente atractivos.</p>
+			<p class="descrip-exp">• Creación de ilustraciones y dibujos detallados para el desarrollo del cómic.</p>
+			<p class="descrip-exp">• Dominio de técnicas y estilos de dibujo para transmitir emociones y narrativa visual.</p>
+			<p class="descrip-exp">• Colaboración en el proceso de creación de la historia y diseño de viñetas para el cómic.</p>
+		</div>
+
+	</div>
+
+	<div id="myModal4" class="modal">
+
+		<!-- Modal content -->
+		<div class="modal-content">
+			<span class="close4">&times;</span>
+			<p class="titulo-exp">Artista Digital</p>
+			<p class="subtitulo-exp">Freelancer</p>
+			<p class="subtitulo-exp">Marzo 2019 - presente</p>
+			<p class="descrip-exp">• Creación de obras digitales con estilo y atractivo visual.</p>
+			<p class="descrip-exp">• Ilustración detallada y expresiva para diversos proyectos.</p>
+			<p class="descrip-exp">• Dominio de técnicas digitales para transmitir emociones y narrativa visual.</p>
+			<p class="descrip-exp">• Colaboración activa en el diseño y desarrollo de proyectos artísticos digitales.</p>
+		</div>
+
+	</div>
+
 	<div class="logos">
 		<div class="logo-container">
 			<div class="logo-wrapper">
-				<img src="imagenes/html.png" alt="Logo"><img src="imagenes/css.png" alt="Logo"><img src="imagenes/js.png" alt="Logo"><img src="imagenes/sass.png" alt="Logo">
-				<img src="imagenes/bootstrap.png" alt="Logo"><img src="imagenes/git.png" alt="Logo"><img src="imagenes/github.png" alt="Logo"><img src="imagenes/php.png">
-				<img src="imagenes/python.png" alt="Logo"><img src="imagenes/oop.png" alt="Logo"><img src="imagenes/mysql.png" alt="Logo"><img src="imagenes/swift.png" alt="Logo">
-				<img src="imagenes/unity.png" alt="Logo"><img src="imagenes/wordpress.png" alt="Logo"><img src="imagenes/thonny.png" alt="Logo">
-				<img src="imagenes/sketch.png" alt="Logo"><img src="imagenes/figma.png" alt="Logo"><img src="imagenes/canva.png" alt="Logo"><img src="imagenes/visual.png" alt="Logo">
-				<img src="imagenes/dreamweaver.png" alt="Logo"><img src="imagenes/adobexd.png" alt="Logo"><img src="imagenes/photoshop.png" alt="Logo">
-				<img src="imagenes/adobeillustrator.png" alt="Logo"><img src="imagenes/adobepremiere.png" alt="Logo"><img src="imagenes/afterefects.png" alt="Logo">
-				<img src="imagenes/word.png" alt="Logo"><img src="imagenes/ppt.png" alt="Logo"><img src="imagenes/excel.png" alt="Logo">
-				<img src="imagenes/html.png" alt="Logo"><img src="imagenes/css.png" alt="Logo"><img src="imagenes/js.png" alt="Logo"><img src="imagenes/sass.png" alt="Logo">
-				<img src="imagenes/bootstrap.png" alt="Logo"><img src="imagenes/git.png" alt="Logo"><img src="imagenes/github.png" alt="Logo"><img src="imagenes/php.png">
-				<img src="imagenes/python.png" alt="Logo"><img src="imagenes/oop.png" alt="Logo"><img src="imagenes/mysql.png" alt="Logo"><img src="imagenes/swift.png" alt="Logo">
-				<img src="imagenes/unity.png" alt="Logo"><img src="imagenes/wordpress.png" alt="Logo"><img src="imagenes/thonny.png" alt="Logo">
-				<img src="imagenes/sketch.png" alt="Logo"><img src="imagenes/figma.png" alt="Logo"><img src="imagenes/canva.png" alt="Logo"><img src="imagenes/visual.png" alt="Logo">
-				<img src="imagenes/dreamweaver.png" alt="Logo"><img src="imagenes/adobexd.png" alt="Logo"><img src="imagenes/photoshop.png" alt="Logo">
-				<img src="imagenes/adobeillustrator.png" alt="Logo"><img src="imagenes/adobepremiere.png" alt="Logo"><img src="imagenes/afterefects.png" alt="Logo">
-				<img src="imagenes/word.png" alt="Logo"><img src="imagenes/ppt.png" alt="Logo"><img src="imagenes/excel.png" alt="Logo">
+				<img src="imagenes/html.png" alt="Logo"><img src="imagenes/css.png" alt="Logo"><img
+					src="imagenes/js.png" alt="Logo"><img src="imagenes/sass.png" alt="Logo">
+				<img src="imagenes/bootstrap.png" alt="Logo"><img src="imagenes/git.png" alt="Logo"><img
+					src="imagenes/github.png" alt="Logo"><img src="imagenes/php.png">
+				<img src="imagenes/python.png" alt="Logo"><img src="imagenes/oop.png" alt="Logo"><img
+					src="imagenes/mysql.png" alt="Logo"><img src="imagenes/swift.png" alt="Logo">
+				<img src="imagenes/unity.png" alt="Logo"><img src="imagenes/wordpress.png" alt="Logo"><img
+					src="imagenes/thonny.png" alt="Logo">
+				<img src="imagenes/sketch.png" alt="Logo"><img src="imagenes/figma.png" alt="Logo"><img
+					src="imagenes/canva.png" alt="Logo"><img src="imagenes/visual.png" alt="Logo">
+				<img src="imagenes/dreamweaver.png" alt="Logo"><img src="imagenes/adobexd.png" alt="Logo"><img
+					src="imagenes/photoshop.png" alt="Logo">
+				<img src="imagenes/adobeillustrator.png" alt="Logo"><img src="imagenes/adobepremiere.png"
+					alt="Logo"><img src="imagenes/afterefects.png" alt="Logo">
+				<img src="imagenes/word.png" alt="Logo"><img src="imagenes/ppt.png" alt="Logo"><img
+					src="imagenes/excel.png" alt="Logo">
+				<img src="imagenes/html.png" alt="Logo"><img src="imagenes/css.png" alt="Logo"><img
+					src="imagenes/js.png" alt="Logo"><img src="imagenes/sass.png" alt="Logo">
+				<img src="imagenes/bootstrap.png" alt="Logo"><img src="imagenes/git.png" alt="Logo"><img
+					src="imagenes/github.png" alt="Logo"><img src="imagenes/php.png">
+				<img src="imagenes/python.png" alt="Logo"><img src="imagenes/oop.png" alt="Logo"><img
+					src="imagenes/mysql.png" alt="Logo"><img src="imagenes/swift.png" alt="Logo">
+				<img src="imagenes/unity.png" alt="Logo"><img src="imagenes/wordpress.png" alt="Logo"><img
+					src="imagenes/thonny.png" alt="Logo">
+				<img src="imagenes/sketch.png" alt="Logo"><img src="imagenes/figma.png" alt="Logo"><img
+					src="imagenes/canva.png" alt="Logo"><img src="imagenes/visual.png" alt="Logo">
+				<img src="imagenes/dreamweaver.png" alt="Logo"><img src="imagenes/adobexd.png" alt="Logo"><img
+					src="imagenes/photoshop.png" alt="Logo">
+				<img src="imagenes/adobeillustrator.png" alt="Logo"><img src="imagenes/adobepremiere.png"
+					alt="Logo"><img src="imagenes/afterefects.png" alt="Logo">
+				<img src="imagenes/word.png" alt="Logo"><img src="imagenes/ppt.png" alt="Logo"><img
+					src="imagenes/excel.png" alt="Logo">
 			</div>
 		</div>
 	</div>
